[package]
name = "mongodb-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4"
futures = "0.3.21"
