[package]
name = "yew-connect4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
wasm_request = '0.1'
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
